// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`battleEngine golden (determinismo por seed — gate da modularização) cenário com personalidade não-neutra (AGGRESSIVE) — seed 9001 1`] = `
{
  "actionsLength": 13,
  "casualties": [
    {
      "heroId": "h1",
      "hpAfter": 39,
      "hpLost": 1,
    },
  ],
  "enemyCasualties": 2,
  "first10Actions": [
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "miss",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": "h1",
    },
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 3,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "h1",
      "actorType": "hero",
      "amount": 17,
      "isCrit": true,
      "round": 3,
      "targetId": "enemy_0_1",
    },
    {
      "actionType": "defeat",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 3,
      "targetId": "enemy_0_1",
    },
  ],
  "reward": 1,
  "rounds": 4,
  "success": true,
}
`;

exports[`battleEngine golden (determinismo por seed — gate da modularização) cenário com sinergia ativa (TANK+ARCHER) — seed 777 1`] = `
{
  "actionsLength": 17,
  "casualties": [
    {
      "heroId": "t1",
      "hpAfter": 38,
      "hpLost": 2,
    },
    {
      "heroId": "a1",
      "hpAfter": 40,
      "hpLost": 0,
    },
  ],
  "enemyCasualties": 2,
  "first10Actions": [
    {
      "actionType": "move",
      "actorId": "t1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "a1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "t1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "miss",
      "actorId": "a1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": "enemy_0_0",
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": 1,
      "isCrit": false,
      "round": 2,
      "targetId": "t1",
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": 1,
      "isCrit": false,
      "round": 2,
      "targetId": "t1",
    },
    {
      "actionType": "miss",
      "actorId": "a1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 3,
      "targetId": "enemy_0_0",
    },
  ],
  "reward": 1,
  "rounds": 4,
  "success": true,
}
`;

exports[`battleEngine golden (determinismo por seed — gate da modularização) cenário sem sinergia (1 WARRIOR) — seed 12345 1`] = `
{
  "actionsLength": 15,
  "casualties": [
    {
      "heroId": "h1",
      "hpAfter": 37,
      "hpLost": 3,
    },
  ],
  "enemyCasualties": 2,
  "first10Actions": [
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 1,
      "targetId": undefined,
    },
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_0",
      "actorType": "enemy",
      "amount": 1,
      "isCrit": false,
      "round": 2,
      "targetId": "h1",
    },
    {
      "actionType": "move",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": undefined,
      "isCrit": undefined,
      "round": 2,
      "targetId": undefined,
    },
    {
      "actionType": "hit",
      "actorId": "enemy_0_1",
      "actorType": "enemy",
      "amount": 1,
      "isCrit": false,
      "round": 2,
      "targetId": "h1",
    },
    {
      "actionType": "move",
      "actorId": "h1",
      "actorType": "hero",
      "amount": undefined,
      "isCrit": undefined,
      "round": 3,
      "targetId": undefined,
    },
  ],
  "reward": 1,
  "rounds": 4,
  "success": true,
}
`;
